force-app/main/default/objects/Cryptocurrency__c/Cryptocurrency__c.object-meta.xml
<CustomObject>
    <label>Cryptocurrency</label>
    <nameField>
        <label>Cryptocurrency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cryptocurrencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>