force-app/main/default/objects/Cryptocurrency__c/fields/API_ID__c.field-meta.xml
<CustomField>
    <fullName>API_ID__c</fullName>
    <label>API ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>