force-app/main/default/objects/Cryptocurrency__c/fields/Token_quantity__c.field-meta.xml
<CustomField>
    <fullName>Token_quantity__c</fullName>
    <label>Token quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>