force-app/main/default/objects/Cryptocurrency__c/fields/Token_value__c.field-meta.xml
<CustomField>
    <fullName>Token_value__c</fullName>
    <label>Token value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>